[package]
name = "camera_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.0"
bevy_asset = "0.18.0"
bevy_egui = "0.39.1"
bevy_sprite = "0.18.0"
image = "0.25.9"
tracing = "0.1.44"
v4l = "0.14.0"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
